resources/css/style.css
@font-face {
  font-family: "ArilloUI";
  font-style: normal;
  font-weight: normal;
  src: url("../font/Arillo_UI_Regular.ttf") format("truetype");
}

@keyframes shake {
  10%, 90% {
    transform: translateX(-1px);
  }
  20%, 80% {
    transform: translateX(2px);
  }
  30%, 50%, 70% {
    transform: translateX(-4px);
  }
  40%, 60% {
    transform: translateX(4px);
  }
}

html {
  height: 100%;
}

* {
  font: normal 100% "ArilloUI";
  font-family: Helvetica, "ArilloUI", sans-serif;
  cursor: default;
}

body {
  display: table;
  height: 100%;
  min-height: 100vh;
  width: 100%;
  margin: 0;
  font-size: 16px;
  color: #fafafa;
  overflow: hidden;
  position: relative;
}

#background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("/usr/share/backgrounds/current");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  -webkit-filter: blur(0px) brightness(100%);
  filter: blur(0px) brightness(100%);
  transform: scale(1.0);
  transition-duration: 1.2s;
}

#background.blurred {
  transform: scale(1.07);
  -webkit-filter: blur(6px) brightness(80%);
  filter: blur(6px) brightness(80%);
}

input {
  color: rgba(255, 255, 255, 0.82);
  border: none;
  border-radius: 6px;
  background: rgba(255, 255, 255, 0.18);
  font-size: 16px;
  padding: 8px;
}

input::placeholder {
  color: rgba(255, 255, 255, .7);
}

input:focus {
  outline: none;
}

input::-webkit-input-placeholder {
  transform: translate3d(0, 3px, 0);
}

a {
  text-decoration: none;
}

#time {
  position: absolute;
  top: 7px;
  right: 14px;
  font-size: 14px;
  z-index: 1;
}

.smooth {
  -webkit-transition: visibility 0s, opacity 0.3s, left 0.4s;
}

.hidden {
  visibility: hidden;
  opacity: 0;
  -webkit-transition-delay: 0.3s, 0s, 0s;
}

.pass {
  padding-top: 0;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.passhidden {
  opacity: 0;
}

.passsmooth {
  -webkit-transition: opacity 0.1s;
}

.apply_shake {
  animation: shake 1s both;
}

.center {
  text-align: center;
}

#row_container {
  display: flex;
  height: 48px;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 12px;
}

#password_form {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
}

#password_entry {
  min-width: 220px;
  text-align: center;
}

.login_container_button {
  display: block;
  padding: 6px;
  fill: rgba(255, 255, 255, 0.18);
}

.login_container_button:active {
  fill: rgba(0, 0, 0, 0.09);
}

.footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  text-align: center;
  -webkit-user-select: none;
}

.footer, .header {
  width: 100%;
}

.login_content {
  display: table-row;
  position: relative;
  height: 100%;
}

.login_container {
  display: table-cell;
  vertical-align: middle;
  width: 100%;
}

#message {
  display: table-row;
  height: 65px;
  -webkit-transition: visibility 0s, opacity 0.3s, height 0.3s;
}

#message.hidden {
  height: 0px;
}

#message_content {
  display: table-cell;
  text-align: center;
  vertical-align: top;
}

#message_content.error {
  color: #ff5252;
}

.user {
  display: inline-block;
  position: relative;
  margin-right: 10px;
  margin-bottom: 10px;
  margin-left: 10px;
  -webkit-user-select: none;
}

.user:active {
  opacity: 0.5;
}

.user_image {
  margin: auto;
  border-radius: 50%;
  width: 96px;
  height: 96px;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all .3s ease-in-out;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, .2);
}

.user_name {
  display: block;
  margin-top: 20px;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, .9);
}

.action {
  display: inline-block;
  width: 80px;
  margin: 20px;
  margin-bottom: 120px;
}

.action_image {
  width: 30px;
  height: 34.276px;
  margin-bottom: 9px;
  filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, .9));
}

.action_label {
  color: #fafafa;
  font-size: 14px;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, .9);
}

@media (-webkit-min-device-pixel-ratio: 2), (min-width: 2000px) {
  body {
    font-size: 32px;
  }
  input {
    padding: 12px;
    border-radius: 8px;
    font-size: 32px;
    text-indent: 16px;
  }
  #time {
    margin-top: 14px;
    margin-right: 28px;
    font-size: 28px;
  }
  .user {
    margin-right: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
  }
  .user_image {
    width: 192px;
    height: 192px;
  }
  .user_name {
    margin-top: 40px;
  }
  #row_container {
    height: 96px;
    gap: 24px;
  }
  .login_container_button {
    padding: 12px;
    width: 48px;
    height: 48px;
  }
  .pass {
    padding-top: 0;
  }
  #password_entry {
    min-width: 440px;
  }
  #message {
    height: 130px;
  }
  .action {
    width: 160px;
    margin: 40px;
    margin-bottom: 240px;
  }
  .action_image {
    width: 60px;
    height: 60px;
    margin-bottom: 18px;
  }
  .action_label {
    font-size: 28px;
  }
}

